<resources>
    <string name="facebook_app_id">694016577368021</string>
    <string name="app_name">Bonodom</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">BEJELENTKEZÉS</string>
    <string name="text_login">Bejelentkezés</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="lastname">Vezetéknév</string>
    <string name="firstname">Keresztnév</string>
    <string name="registration"> REGISZTRÁCIÓ </string>
    <string name="individual">Magánszemély</string>
    <string name="estateagency">Ingatlaniroda</string>
    <string name="mail">E-mail</string>
    <string name="contactholder">Kapcsolattartó</string>
    <string name="reg_house">main_house_image</string>
    <string name="existing_account">Már van fiókja?</string>
    <string name="acceptingfszf">A REGISZTRÁCIÓ gomb megnyomásávával elfogadja a</string>
    <string name="fszf">Felhasználási Feltételeket</string>
    <string name="title_activity_blank_page">BlankPageActivity</string>
    <string name="company_name">Iroda neve</string>
    <string name="forgotten_pass">Elfelejtette jelszavát?</string>
    <string name="reminder_pass">Emlékeztető</string>
    <string name="registration_1">Regisztráljon</string>
    <string name="you_dont_have">Még nincs fiókja?</string>
    <string name="send">Küldés</string>
    <string name="forgotten_pass_text">Új jelszó beállításához kérjük adja meg a regisztrált e-mail címét. Rendszerünk a megadott e-mail címre kiküldi az új jelszavát, amit később megváltoztathat</string>
    <string name="offensive_ad">Hibás, sértő hírdetés bejelentése</string>
    <string name="button_go">Mehet</string>
    <string name="button_next">Következő</string>
    <string name="button_back">Vissza</string>
    <string name="button_save">Mentés</string>
    <string name="button_cancel">Mégse</string>
    <string name="button_picswap">Kép lecserélése</string>
    <string name="button_picdelete">Kép törlése</string>
    <string name="button_delete">Törlés</string>
    <string name="button_modify">Módosít</string>
    <string name="button_yes">Igen</string>
    <string name="button_no">Nem</string>
    <string name="button_finish">Befejezés</string>
    <string name="mainpage">Összes hirdetés</string>
    <string name="profile">Személyes</string>
    <string name="messages">Üzenetek</string>
    <string name="billing">Számlázás</string>
    <string name="myadvertisements">Hirdetéseim</string>
    <string name="myfavourites">Kedvenceim</string>
    <string name="admonitor">Hirdetésfigyelő</string>
    <string name="agency">Ügynökség</string>
    <string name="invitation">Meghívás</string>
    <string name="logout">Kijelentkezés</string>
    <string name="type_search">Kivitel:</string>
    <string name="localisation_search">Elhelyezkedés:</string>
    <string name="keyword_search">Keresés:</string>
    <string name="search_hint">pl.: Debrecen Simonffy utca</string>
    <string name="idontwant_search">Ne szerepeljen:</string>
    <string name="floors_search">Szintek:</string>
    <string name="rooms_count_search">Szobák száma:</string>
    <string name="elevator_search">Lift:</string>
    <string name="balcony_search">Erkély:</string>
    <string name="realestate_size_search">Méret:</string>
    <string name="view_type_search">Kilátás:</string>
    <string name="has_furniture_search">Bútorozott:</string>
    <string name="parking_type_search">Parkolás:</string>
    <string name="condition_search">Állapot:</string>
    <string name="energy_certificate_search">Energiatanúsítvány:</string>
    <string name="price_search">Ár:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="type_realestate">Típus</string>
    <string name="elevator_realestate">Lift</string>
    <string name="balcony_realestate">Erkély</string>
    <string name="parking_realestate">Parkolás</string>
    <string name="view_realestate">Kilátás</string>
    <string name="heating_realestate">Fűtés</string>
    <string name="comfort_realestate">Komfort</string>
    <string name="condition_realestate">Állapot</string>
    <string name="floors_realestate">Szintek</string>
    <string name="bathroom_wc_realestate">Fürdő és WC</string>
    <string name="height_realestate">Belmagasság</string>
    <string name="gardenrelation_realestate">Kertkapcsolatos</string>
    <string name="keyword_hint">Ami biztos szerepeljen a hírdetésben</string>
    <string name="idontwant_hint">Ami biztos ne szerepeljen a hírdetésben</string>
    <string name="roomcount_realestate_item">Szobák</string>
    <string name="size_realestate_item">Méret</string>
    <string name="has_furniture_realestate">Bútorozott</string>
    <string name="energy_certificate_realestate">Tanúsítvány</string>
    <string name="show_only_csok_estates">CSOK ingatlanok mutatása</string>
    <string name="add_admonitor">Hírdetésfigyelő készítése</string>
    <string name="admonitor_name_hint">Nevezd el a figyelődet</string>
    <string name="add_lookaround">Körbejárás készítése</string>
    <string name="add_pano_img">Panoráma készítése</string>
    <string-array name="realestate_type_spinner_array">
        <item>Mindegy</item>
        <item>Tégla</item>
        <item>Panel</item>
        <item>Csúsztatott zsalus</item>
    </string-array>
    <string-array name="realestate_local_spinner_array">
        <item>Mindegy</item>
        <item>Balaton</item>
        <item>Baranya</item>
        <item>Békés</item>
        <item>Borsod-Abaúj-Zemplén</item>
        <item>Budapest</item>
        <item>Csongrád</item>
        <item>Fejér</item>
        <item>Győr-Moson-Sopron</item>
        <item>Hajdú-Bihar</item>
        <item>Heves</item>
        <item>Jász-Nagykun-Szolnok</item>
        <item>Komárom-Esztergom</item>
        <item>Nógrád</item>
        <item>Pest</item>
        <item>Somogy</item>
        <item>Szabolcs-Szatmár-Bereg</item>
        <item>Tolna</item>
        <item>Vas</item>
        <item>Veszprém</item>
        <item>Zala</item>
    </string-array>
    <string-array name="realestate_floors_min_array">
        <item>Mindegy</item>
        <item>Szuterén</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="realestate_floors_max_array">
        <item>Mindegy</item>
        <item>10+</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="realestate_rooms_min_array">
        <item>Mindegy</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="realestate_rooms_max_array">
        <item>Mindegy</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="realestate_elevator_array">
        <item>Mindegy</item>
        <item>Van</item>
        <item>Nincs</item>
    </string-array>
    <string-array name="realestate_balcony_array">
        <item>Mindegy</item>
        <item>Van</item>
        <item>Nincs</item>
    </string-array>
    <string-array name="realestate_innerheight_array">
        <item>Mindegy</item>
        <item>3m-nél alacsonyabb</item>
        <item>3m vagy magasabb</item>
    </string-array>
    <string-array name="bathroom_wc_array">
        <item>Mindegy</item>
        <item>Külön helyiségben</item>
        <item>Egy helyiségben</item>
        <item>Külön és egyben is</item>
    </string-array>
    <string-array name="mindegy_van_nincs_array">
        <item>Mindegy</item>
        <item>Van</item>
        <item>Nincs</item>
    </string-array>
    <string-array name="condition_array">
        <item>Mindegy</item>
        <item>Új</item>
        <item>Újszerű</item>
        <item>Felújított</item>
    </string-array>
    <string-array name="attic_array">
        <item>Mindegy</item>
        <item>Tetőtéri</item>
        <item>Nem tetőtéri</item>
        <item>Legfelső emelet, nem tetőtéri</item>
        <item>Zárószint</item>
        <item>Penthouse</item>
    </string-array>
    <string name="advertinfo">Hírdetés információk</string>
    <string name="below_advertinfo">50 simajobb tempó, vége ki és 100 a balon, jobb 11 útonból sima bal, sima bal után 200 a balon mész</string>
    <string name="advert_title">Hírdetés címe*:</string>
    <string name="advert_title_hint">Max 100 karakter</string>
    <string name="advert_description">Hírdetés leírása*:</string>
    <string name="advert_description_hint">Meséld el mit akarsz eladni másoknak</string>
    <string name="advert_type">Hírdetés típusa*: </string>
    <string name="advert_price1">Ingatlan Ára*:</string>
    <string name="advert_price2">Bérleti díj*:</string>
    <string name="advert_price_hint1">Pl.: 15 600 000 Ft</string>
    <string name="advert_city">Település*:</string>
    <string name="advert_city_hint">Pl.: Budapest</string>
    <string name="advert_street">Utca*:</string>
    <string name="advert_street_hint">Pl.: Fő út</string>
    <string name="advert_str_number">Házszám*:</string>
    <string name="advert_str_number_hint">Pl.: 54/A</string>
    <string name="addrealest_pg_3_desc">Töltsön fel képeket, hogy mégjobban felkeltse az ingatlan után érdeklődők figyelmét</string>
    <string name="addrealest_pg_4_desc">Ha megadja a ráérését, az hírdetése iránt érdeklődök egyszerüen be tudnak jelentkezni önhöz, hogy személyesen is megnézzék az ingatlanját</string>
    <string name="estate_info">Ingatlan információk</string>
    <string name="add_advert_rooms_count">Szobák száma*:</string>
    <string name="add_advert_condition">Állapot*:</string>
    <string name="add_advert_floors">Emelet*:</string>
    <string name="add_advert_type">Ingatlan típusa*:</string>
    <string name="add_advert_balcony">Erkély*:</string>
    <string name="add_advert_parking">Parkolás*:</string>
    <string name="add_advert_size">Méret*:</string>
    <string name="add_advert_heating">Fűtés*:</string>
    <string name="add_advert_elevator">Lift*:</string>
    <string name="add_advert_ecertification">E.tanúsítvány:</string>
    <string name="add_advert_view">Kilátás*:</string>
    <string name="add_advert_furniture">Bútorozott*:</string>
    <string name="add_estate_pictures">Képek hozzáadása</string>
    <string name="add_camera_image_hint">A telefon segítségével készítsen képet az ingatlanról</string>
    <string name="add_camera_image_text">Kép készítése</string>
    <string name="add_gallery_image_hint">A telefonon meglévő képek közül a fotók kiválasztása</string>
    <string name="add_gallery_image_text">Feltöltés</string>
    <string name="add_seeing_date">Megtekintés megadása</string>
    <string name="add_commit_n_service">Véglegesítés, szolgáltatások</string>
    <string name="advert_seeing_start">Kezdés</string>
    <string name="advert_seeing_finish">Vége</string>
    <string name="advert_seeing_days">Napok:</string>
    <string name="timepicker_start_text">Adja meg a megtikintések kezdőidőpontját</string>
    <string name="surename">Vezetéknév:</string>
    <string name="firstname_profile">Keresztnév:</string>
    <string name="phone_number">Telefonszám:</string>
    <string name="email">E-mail:</string>
    <string name="passw_change">Jelszó módosítása</string>
    <string name="passw_actual">Jelenlegi jelszó:</string>
    <string name="passw_new">Új jelszó:</string>
    <string name="passw_again">Még egyszer:</string>
    <string name="content_profile_top_hint_text">Ezen az oldalon megadhatod/módosíthatod személyes adataidat és jelszavadat</string>
    <string name="areyousure_delete">Biztosan törli a hírdetést?</string>
</resources>