<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/search_group">

        <item
            android:id="@+id/nav_estatetype"
            android:title="@string/type_search"
            android:icon="@drawable/ic_action_search"
            android:showAsAction="ifRoom|collapseActionView"
            android:actionViewClass="android.support.v7.widget.SearchView"
            />
        <item
            android:id="@+id/nav_localisaton"
            android:title="@string/localisation_search" />
        <item
            android:id="@+id/nav_keyword"
            android:title="@string/keyword_search" />
        <item
            android:id="@+id/nav_dontwanttosee"
            android:title="@string/idontwant_search" />
        <item
            android:id="@+id/nav_floors"
            android:title="@string/floors_search" />
        <item
            android:id="@+id/nav_roomcount"
            android:title="@string/rooms_count_search" />
        <item
            android:id="@+id/nav_elevator"
            android:title="@string/elevator_search" />
        <item
            android:id="@+id/nav_balcony"
            android:title="@string/balcony_search" />
        <item
            android:id="@+id/nav_bath_wc"
            android:title="@string/view_type_search"/>
        <item
            android:id="@+id/nav_aircondition"
            android:title="@string/has_furniture_search"/>
        <item
            android:id="@+id/nav_gardenrelation"
            android:title="@string/parking_type_search"/>
        <item
            android:id="@+id/nav_condition"
            android:title="@string/condition_search"/>
        <item
            android:id="@+id/nav_attic"
            android:title="@string/energy_certificate_search"/>
    </group>

</menu>
