<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainpage"
            android:icon="@drawable/ic_action_prof"
            android:title="@string/mainpage" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_prof"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_action_envelop"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_billing"
            android:icon="@drawable/ic_action_card"
            android:title="@string/billing" />
        <item
            android:id="@+id/nav_myads"
            android:icon="@drawable/ic_action_house"
            android:title="@string/myadvertisements" />

        <item
            android:id="@+id/nav_myfavs"
            android:icon="@drawable/ic_action_heart"
            android:title="@string/myfavourites" />

        <item
            android:id="@+id/nav_admonitor"
            android:icon="@drawable/ic_action_binocular"
            android:title="@string/admonitor" />

        <item
            android:id="@+id/nav_agency"
            android:icon="@drawable/ic_action_agencies"
            android:title="@string/agency" />
        <item
            android:id="@+id/nav_invitation"
            android:icon="@drawable/ic_action_users"
            android:title="@string/invitation" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/logout" />
    </group>

</menu>
