<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/adding_advertinfo_linerlayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <ImageView
            android:src="@drawable/heart_filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/geo_withnumber_image"
            android:layout_margin="5sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/advertinfo"
            android:id="@+id/adding_advertinfo_text"
            android:layout_alignParentTop="true"
            android:layout_margin="5sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/below_advertinfo"
        android:id="@+id/below_advertinfo_text"
        android:layout_below="@+id/adding_advertinfo_linerlayout"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="5sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advert_title"
        android:id="@+id/adverttitle_textview"
        android:layout_below="@+id/below_advertinfo_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advert_description"
        android:id="@+id/advert_description_textveiw"
        android:layout_below="@+id/adverttitle_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adverttitle_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/advert_description_textveiw"
        android:layout_toEndOf="@+id/advert_description_textveiw"
        android:hint="@string/advert_title_hint"
        android:layout_above="@+id/advert_description_edittext"
        android:singleLine="true"
        android:layout_below="@+id/below_advertinfo_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:id="@+id/advert_description_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/adverttitle_edittext"
        android:layout_alignStart="@+id/adverttitle_edittext"
        android:hint="@string/advert_description_hint"
        android:layout_alignTop="@+id/advert_description_textveiw" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advert_type"
        android:id="@+id/advert_type_textview"
        android:layout_below="@+id/advert_description_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_advert_type_spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/advert_description_edittext"
        android:layout_alignStart="@+id/advert_description_edittext"
        android:layout_alignBottom="@+id/advert_type_textview"
        android:layout_alignTop="@+id/advert_type_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advert_price1"
        android:id="@+id/add_advert_price_textview"
        android:layout_below="@+id/advert_type_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_advert_price_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/advert_price_hint1"
        android:layout_below="@+id/advert_type_textview"
        android:layout_alignLeft="@+id/add_advert_price_edittext"
        android:layout_alignStart="@+id/add_advert_price_edittext"
        android:layout_above="@+id/add_advert_city_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advert_city"
        android:id="@+id/add_advert_city_text"
        android:layout_below="@+id/add_advert_price_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_advert_price_edittext"
        android:layout_below="@+id/add_advert_price_textview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/advert_city_hint"
        android:layout_toEndOf="@+id/advert_description_textveiw"
        android:layout_toRightOf="@+id/advert_description_textveiw"
        android:layout_above="@+id/add_advert_street_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advert_street"
        android:id="@+id/add_advert_street_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_advert_city_text"
        android:layout_margin="10sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_advert_street_edittext"
        android:layout_below="@+id/add_advert_city_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/add_advert_price_edittext"
        android:layout_alignStart="@+id/add_advert_price_edittext"
        android:hint="@string/advert_street_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advert_str_number"
        android:id="@+id/add_advert_str_number_textview"
        android:layout_below="@+id/add_advert_street_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_advert_str_number_edittext"
        android:layout_below="@+id/add_advert_street_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/add_advert_street_edittext"
        android:layout_alignStart="@+id/add_advert_street_edittext"
        android:hint="@string/advert_str_number_hint"/>
</RelativeLayout>