<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/content_profile_top_hint_text"
            android:id="@+id/profile_top_textview"
            android:textAlignment="center"/>

        <View
            android:id="@+id/vonalgyasz01"
            android:layout_width="fill_parent"
            android:layout_height="1sp"
            android:layout_marginStart="5sp"
            android:layout_marginBottom="5sp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/content_profile_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp">


            <EditText
                android:id="@+id/profile_surename_editText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:background="#ffffff"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/surename"
                android:inputType="textPersonName"
                android:paddingStart="15sp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/profile_firstname_editText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:background="#ffffff"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/firstname_profile"
                android:inputType="textPersonName"
                android:paddingStart="15sp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/profile_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:background="#ffffff"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="15sp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/profile_mail_editText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:background="#ffffff"
                android:elevation="2dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="15sp"
                android:textSize="13sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/change_pass_header_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/change_pass_header_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passw_change"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <View
                    android:id="@+id/vonalgyasz11"
                    android:layout_width="fill_parent"
                    android:layout_height="1sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginBottom="5sp"
                    android:background="@android:color/darker_gray"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <EditText
                android:id="@+id/change_passw_editText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:background="#ffffff"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/passw_actual"
                android:inputType="textPassword"
                android:paddingStart="15sp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/change_pass_new_editText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:background="#ffffff"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/passw_new"
                android:inputType="textPassword"
                android:paddingStart="15sp"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/passw_again_editText"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:allowUndo="false"
                android:background="#ffffff"
                android:elevation="2dp"
                android:ems="10"
                android:hint="@string/passw_again"
                android:inputType="textPassword"
                android:paddingStart="15sp"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/profile_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_margin="10sp"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/profile_save_button"
                    android:layout_width="130sp"
                    android:layout_height="40sp"
                    android:layout_margin="5sp"
                    android:background="@drawable/gomb_kicsi"
                    android:padding="3sp"
                    android:text="@string/button_save"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>